--- a/merchandise/frontend/templates/index.html
+++ b/merchandise/frontend/templates/index.html
@@ -4,4 +4,11 @@
 
 {% block content %}
   <h2>Welcome to the THON Merchandise Application!</h2>
+  <p>
+    {% if request.user.is_authenticated %}
+    You are logged in as: {{ request.user }}<br/>
+    {% endif %}
+    <a href="{% url 'admin:index' %}">Click here to go to the admin!</a><br/>
+    <a href="{% url 'login' %}?next={{request.path}}">Login</a>
+  </p>
 {% endblock %}
