--- a/merchandise/frontend/templates/index.html
+++ b/merchandise/frontend/templates/index.html
@@ -1,14 +1,17 @@
 {% extends 'base.html' %}
 
-{% block title %}THON Merchandise{% endblock %}
-
 {% block content %}
-  <h2>Welcome to the THON Merchandise Application!</h2>
-  <p>
-    {% if request.user.is_authenticated %}
-    You are logged in as: {{ request.user }}<br/>
-    {% endif %}
-    <a href="{% url 'admin:index' %}">Click here to go to the admin!</a><br/>
-    <a href="{% url 'login' %}?next={{request.path}}">Login</a>
-  </p>
+<div class="row">
+    <div class="col-md-4">
+        <p>
+        {% if request.user.is_authenticated %}
+            You are logged in as: {{ request.user }}<br/>
+            <a class="btn btn-default waves-effect waves-light btn-block" href="{% url 'admin:index' %}">Click here to go to the admin!</a><br/>
+        {% else %}
+            You are not logged in!
+            <a class="btn btn-default waves-effect waves-light btn-block" href="{% url 'login' %}?next={{request.path}}">Login</a>
+        {% endif %}
+        </p>
+    </div>
+</div>
 {% endblock %}
