--- a/merchandise/frontend/templates/registration/login.html
+++ b/merchandise/frontend/templates/registration/login.html
@@ -1,12 +1,34 @@
-{% extends 'base.html' %}
+{% extends 'base-no-nav.html' %}
 
-{% block title %}Login{% endblock %}
+{% block main %}
+<main id="main">
+    <div class="row login-panel">
+        <div class="col-md-4"></div>
+        <div class="col-md-4 card-panel">
+            <div class="row">
+                <h5 class="text-center">Login</h5>
+                <hr>
+                <form class="col-md-12" method="POST">
+                {% csrf_token %}
+                    <div class="input-field">
+                        <i class="material-icons prefix">account_circle</i>
+                        {{ form.username }}
+                        <label for="id_username" class="">Username</label>
+                    </div>
+                    <div class="input-field">
+                        <i class="material-icons prefix">https</i>
+                        {{ form.password }}
+                        <label for="id_password" class="">Password</label>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary waves-effect waves-light">Login</button>
+                    </div>
+                </form>
+            </div>
+            <!--./Main row-->
+        </div>
+        <div class="col-md-4"></div>
 
-{% block content %}
-  <h2>Login</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-  </form>
+    </div>
+</main>
 {% endblock %}
