--- a/merchandise/frontend/templates/base-no-nav.html
+++ b/merchandise/frontend/templates/base-no-nav.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% if page_title %}
-        <title>THON Merchandise - {{ page_title }}</title>
+        <title>THON Merchandise - {{ page_header }}</title>
     {% else %}
         <title>THON Merchandise</title>
     {% endif %}
