--- a/merchandise/frontend/templates/base-no-nav.html
+++ b/merchandise/frontend/templates/base-no-nav.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% if page_title %}
+    {% if page_header %}
         <title>THON Merchandise - {{ page_header }}</title>
     {% else %}
         <title>THON Merchandise</title>
