Add ItemDetails List & Detail Views

--- a/merchandise/frontend/templates/base.html
+++ b/merchandise/frontend/templates/base.html
@@ -31,7 +31,8 @@
 
     <!-- Side navigation links -->
     <ul class="collapsible collapsible-accordion">
-        <li><a href="#" class="waves-effect waves-light"><i class="fa fa-home"></i> Home</a></li>
+        <li><a href="/" class="waves-effect waves-light"><i class="fa fa-home"></i> Home</a></li>
+        <li><a href="{% url 'item:item_details_list' %}" class="waves-effect waves-light"><i class="fa fa-tags"></i> Items</a></li>
         <li><a href="#" class="waves-effect waves-light"><i class="fa fa-dollar"></i> Sales</a></li>
         <li><a href="#" class="waves-effect waves-light"><i class="fa fa-th"></i> Inventory</a></li>
         <li><a href="#" class="waves-effect waves-light"><i class="fa fa-truck"></i> Orders</a></li>
@@ -50,6 +51,11 @@
         {% block content %}
         {% endblock %}
     </div>
+    <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
+        {% block actions %}
+        {% endblock %}
+    </div>
+</div>
 </main>
 
 <script>
