--- a/merchandise/schedule/templates/schedule/users_landing.html
+++ b/merchandise/schedule/templates/schedule/users_landing.html
@@ -8,8 +8,7 @@
             <h3>Manage Users</h3>
         </div>
         <div class="col-sm-3 vertical-center">
-            <a href={% url 'schedule:create_schedule' %} class="btn btn-primary btn-lg">
-            <span class="glyphicon glyphicon-pencil"></span>Create Schedule</a>
+            <a href={% url 'users:list_schedules' %} class="btn btn-primary btn-lg">View Schedules</a>
         </div>
 
     </div>
