--- a/merchandise/frontend/templates/base.html
+++ b/merchandise/frontend/templates/base.html
@@ -63,5 +63,8 @@
     $(".button-collapse").sideNav();
     // Initialize collapsible (uncomment the line below if you use the dropdown variation)
     $('.collapsible').collapsible();
+    $(document).ready(function () {
+        $('select').material_select();
+    });
 </script>
 {% endblock %}
