Item create view

--- a/merchandise/item/templates/item/itemdetails_list.html
+++ b/merchandise/item/templates/item/itemdetails_list.html
@@ -27,7 +27,7 @@
 {% endblock %}
 
 {% block actions %}
-<a class="btn-floating btn-large green">
+<a class="btn-floating btn-large green" href="{% url 'item:item_details_create' %}">
     <i class="large material-icons">add</i>
 </a>
 {% endblock %}
