--- a/merchandise/frontend/static/css/theme.css
+++ b/merchandise/frontend/static/css/theme.css
@@ -25,6 +25,10 @@
     background-size: cover;
 }
 
+.asteriskField {
+    color: #2BBBAD;
+}
+
 @media (min-width: 992px) {
     .main {
         padding-left: 265px;
