Update itemdetails url

--- a/merchandise/frontend/templates/base.html
+++ b/merchandise/frontend/templates/base.html
@@ -32,7 +32,7 @@
     <!-- Side navigation links -->
     <ul class="collapsible collapsible-accordion">
         <li><a href="/" class="waves-effect waves-light"><i class="fa fa-home"></i> Home</a></li>
-        <li><a href="{% url 'item:item_details_list' %}" class="waves-effect waves-light"><i class="fa fa-tags"></i> Items</a></li>
+        <li><a href="{% url 'item:item_details' %}" class="waves-effect waves-light"><i class="fa fa-tags"></i> Items</a></li>
         <li><a href="#" class="waves-effect waves-light"><i class="fa fa-dollar"></i> Sales</a></li>
         <li><a href="#" class="waves-effect waves-light"><i class="fa fa-th"></i> Inventory</a></li>
         <li><a href="#" class="waves-effect waves-light"><i class="fa fa-truck"></i> Orders</a></li>
