--- a/merchandise/item/templates/item/itemdetails_list.html
+++ b/merchandise/item/templates/item/itemdetails_list.html
@@ -15,6 +15,10 @@
             <td>{{ item.category }}</td>
             <td>{{ item.is_active|check_mark }}</td>
         </tr>   
+        {% empty %}
+        <tr>
+            <td colspan="3">No Items Found</td>
+        </tr>
         {% endfor %}
     </tbody>
 </table>
