Fixes for my dearest john martin

--- a/merchandise/schedule/templates/schedule/update_schedule.html
+++ b/merchandise/schedule/templates/schedule/update_schedule.html
@@ -4,12 +4,11 @@
 
 {% block content %}
 
-    <div class="container">
-        <div class="page-header">
-            <h3>Update a Schedule</h3>
+    <div class="row">
+        <div class="col-md-6">
+            {% crispy form %}
         </div>
 
-        {% crispy form %}
 
     </div>
 
