--- a/merchandise/schedule/templates/schedule/create_schedule.html
+++ b/merchandise/schedule/templates/schedule/create_schedule.html
@@ -4,13 +4,10 @@
 
 {% block content %}
 
-    <div class="container">
-        <div class="page-header">
-            <h3>Add a Schedule</h3>
+    <div class="row">
+        <div class="col-md-6">
+            {% crispy form %}
         </div>
-
-        {% crispy form %}
-
     </div>
 
 {% endblock %}
