--- a/merchandise/schedule/templates/schedule/list_schedule.html
+++ b/merchandise/schedule/templates/schedule/list_schedule.html
@@ -4,15 +4,7 @@
 
 {% block content %}
 
-    <div class="container">
-        <div class="page-header">
-            <h3>Schedule List</h3>
-        </div>
-        <div class="col-sm-3 vertical-center">
-            <a href={% url 'users:create_schedule' %} class="btn btn-primary btn-lg">
-            <span class="glyphicon glyphicon-pencil"></span>Add Schedule</a>
-        </div>
-
+    <div class="row">
         <div class="panel-body">
             <table class="table table-striped">
                 <thead>
@@ -42,4 +34,9 @@
 
     </div>
 
+{% endblock %}
+{% block actions %}
+<a class="btn-floating btn-large green" href="{% url 'users:create_schedule' %}">
+    <i class="large material-icons">add</i>
+</a>
 {% endblock %}
