--- a/merchandise/schedule/templates/schedule/users_landing.html
+++ b/merchandise/schedule/templates/schedule/users_landing.html
@@ -3,10 +3,10 @@
 
 {% block content %}
 
-    <div class="container">
-        <div class="page-header">
-            <h3>Manage Users</h3>
-        </div>
+    <div class="row">
+{#        <div class="page-header">#}
+{#            <h3>Manage Users</h3>#}
+{#        </div>#}
         <div class="col-sm-3 vertical-center">
             <a href={% url 'users:list_schedules' %} class="btn btn-primary btn-lg">View Schedules</a>
         </div>
