no more users, yas schedule

--- a/merchandise/frontend/templates/base.html
+++ b/merchandise/frontend/templates/base.html
@@ -37,7 +37,7 @@
         <li><a href="{% url 'location:list_locations' %}" class="waves-effect waves-light"><i class="fa fa-th"></i> Inventory</a></li>
         <li><a href="#" class="waves-effect waves-light"><i class="fa fa-truck"></i> Orders</a></li>
         <li><a href="#" class="waves-effect waves-light"><i class="fa fa-bar-chart"></i> Reports</a></li>
-        <li><a href="{% url 'schedule:user_landing' %}" class="waves-effect waves-light"><i class="fa fa-users"></i> Users</a></li>
+        <li><a href="{% url 'schedule:list_schedules' %}" class="waves-effect waves-light"><i class="fa fa-calendar"></i>Schedule</a></li>
     </ul>
     <!--/. Side navigation links -->
 </ul>
