--- a/merchandise/frontend/templates/base.html
+++ b/merchandise/frontend/templates/base.html
@@ -35,7 +35,7 @@
         <li><a href="{% url 'item:item_details_list' %}" class="waves-effect waves-light"><i class="fa fa-tags"></i> Items</a></li>
         <li><a href="#" class="waves-effect waves-light"><i class="fa fa-dollar"></i> Sales</a></li>
         <li><a href="#" class="waves-effect waves-light"><i class="fa fa-th"></i> Inventory</a></li>
-        <li><a href="#" class="waves-effect waves-light"><i class="fa fa-truck"></i> Orders</a></li>
+        <li><a href="{% url 'supply:order_list' %}" class="waves-effect waves-light"><i class="fa fa-truck"></i> Orders</a></li>
         <li><a href="#" class="waves-effect waves-light"><i class="fa fa-bar-chart"></i> Reports</a></li>
         <li><a href="#" class="waves-effect waves-light"><i class="fa fa-users"></i> Users</a></li>
     </ul>
