--- a/merchandise/frontend/templates/base-no-nav.html
+++ b/merchandise/frontend/templates/base-no-nav.html
@@ -20,20 +20,31 @@
 
     <!-- CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/backgrid.css' %}" rel="stylesheet">
+    <link href="{% static 'css/backgrid-filter.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/mdb.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/theme.css' %}" rel="stylesheet">
     {% block css %}{% endblock %}
-
-    <!-- Scripts -->
-    <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/mdb.min.js' %}"></script>
-    {% block scripts %}{% endblock %}
 
 </head>
 
 <body>
 {% block main %}{% endblock %}
+
+    <!-- Scripts -->
+    <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/mdb.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/underscore.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/backbone.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/handlebars.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/backbone.paginator.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/backgrid.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/backgrid-filter.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/backgrid-select-filter.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/backgrid-paginator.min.js' %}"></script>
+
+    {% block scripts %}{% endblock %}
 </body>
 
 </html>
