--- a/merchandise/supply/templates/supply/order_list.html
+++ b/merchandise/supply/templates/supply/order_list.html
@@ -26,7 +26,7 @@
 {% endblock %}
 
 {% block actions %}
-<a class="btn-floating btn-large green">
+<a class="btn-floating btn-large green" href="{% url 'supply:order_create' %}">
     <i class="large material-icons">add</i>
 </a>
 {% endblock %}
