--- a/merchandise/inventory/templates/inventory/inventory_list.html
+++ b/merchandise/inventory/templates/inventory/inventory_list.html
@@ -16,6 +16,7 @@
                 <td><a href="{% url 'item:item_details_detail' item.item.id %}">{{ item.item }}</a></td>
                 <td>{{ item.location }}</td>
                 <td>{{ item.quantity }}</td>
+                <td><a href="{% url 'inventory:inventory_update' item.id %}">Update</a></td>
             </tr>
             {% empty %}
             <tr>
@@ -24,4 +25,20 @@
             {% endfor %}
         </tbody>
     </table>
+{% endblock %}
+{% block actions %}
+<a class="btn-floating btn-large floating-btn-blue">
+            <i class="large material-icons">more_vert</i></a>
+        <ul>
+            <li><a class="btn-floating blue darken-2" href="{% url 'inventory:inventory_create' %}"
+                   data-toggle="tooltip" data-placement="left" title="" data-original-title="Create Inventory"><i
+                    class="material-icons">local_offer</i></a></li>
+            <li><a class="btn-floating green darken-1" href="{% url 'location:locations' %}"
+                   data-toggle="tooltip" data-placement="left" title="" data-original-title="Manage Locations"><i
+                    class="material-icons">place</i></a></li>
+            <li><a class="btn-floating orange darken-1"
+                   href="{% url 'inventory:list_moves' %}" data-toggle="tooltip"
+                   data-placement="left" title="" data-original-title="Manage Movements"><i class="material-icons">local_shipping</i></a>
+            </li>
+        </ul>
 {% endblock %}
