--- a/merchandise/sale/templates/sale/cart.html
+++ b/merchandise/sale/templates/sale/cart.html
@@ -45,7 +45,7 @@
 {% endblock content %}
 
 {% block actions %}
-<a class="btn-floating btn-large green" href="">
+<a class="btn-floating btn-large green" href="{% url 'sale:transaction_create' %}">
     <i class="large material-icons">done</i>
 </a>
 <ul>
