--- a/merchandise/frontend/templates/base-no-nav.html
+++ b/merchandise/frontend/templates/base-no-nav.html
@@ -43,7 +43,7 @@
     <script type="text/javascript" src="{% static 'js/backgrid-filter.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/backgrid-select-filter.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/backgrid-paginator.min.js' %}"></script>
-
+    {% block pre_scripts %}{% endblock %}
     {% block scripts %}{% endblock %}
 </body>
 
