--- a/merchandise/frontend/templates/base.html
+++ b/merchandise/frontend/templates/base.html
@@ -57,7 +57,9 @@
     </div>
 </div>
 </main>
+{% endblock %}
 
+{% block pre_scripts %}
 <script>
     // Initialize collapse button
     $(".button-collapse").sideNav();
