--- a/merchandise/inventory/templates/inventory/inventory_list.html
+++ b/merchandise/inventory/templates/inventory/inventory_list.html
@@ -8,6 +8,7 @@
                 <th>Name</th>
                 <th>Location</th>
                 <th>Quantity</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
