--- a/merchandise/item/templates/item/itemdetails_detail.html
+++ b/merchandise/item/templates/item/itemdetails_detail.html
@@ -33,6 +33,7 @@
                 <th>Size</th>
                 <th>Price</th>
                 <th>SKU</th>
+                <th>Popularity</th>
             </thead>
             <tbody>
                 {% for item in object.item_set.all %}
@@ -40,6 +41,7 @@
                     <td><a href="{% url 'item:item_update' item.id %}">{{ item.size }}</a></td>
                     <td>${{ item.price }}</td>
                     <td>{{ item.sku }}</td>
+                    <td>{{ item.popularity|five_stars }}</td>
                 </tr>
                 {% empty %}
                     <td colspan="3">No Sizes Found</td>
